--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,20 +4,23 @@
     padding: 20px;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap;
+    padding: 12px, 108px;
     background-color: var(--cor-footer-light);
     width: 100%;
     box-sizing: border-box;
-    margin: 0;
+    gap: 100px;
+    flex-wrap: wrap;
+    
   }
   
   .informacoes {
-    transform: translateX(500px);
+    display: flex;
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin-top: 16px;
+    margin-left: 408px;
   }
   
   .informacoes h4 {
@@ -62,7 +65,7 @@
   }
   
   .atendimento {
-    transform: translateX(75px);
+    margin-right: 308px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -175,3 +178,76 @@
     margin-top: 20px;
   }
   
+  @media (max-width: 1300px) {
+    .containerfooter {
+      gap: 250px;
+    }
+
+    .informacoes {
+      margin-left: 208px;
+    }
+
+    .atendimento {
+      margin-right: 108px;
+    }
+  }
+
+  
+  @media (max-width: 1100px) {
+    .containerfooter {
+      gap: 150px;
+    }
+  }
+
+  @media (max-width: 950px) {
+    .containerfooter {
+      gap: 100px;
+    }
+
+    .informacoes {
+      margin-left: 108px;
+    }
+
+    .atendimento {
+      margin-right: 58px;
+    }
+    
+  }
+
+  @media (max-width: 750px) {
+    .containerfooter {
+      gap: 50px;
+    }
+
+    .atendimento {
+      justify-content: center;
+      align-items: center;
+      align-self: center;
+      
+
+    }
+
+    .whats h3{
+      display: none;
+    }
+    
+    .email a {
+      display: none;
+    }
+    
+  }
+
+  @media (max-width: 500px) {
+    .containerfooter {
+      gap: 50px;
+    }
+    
+    .informacoes {
+      margin-left: 16px;
+    }
+
+    .atendimento {
+      margin-right: 16px;
+    }
+    
+  }
