--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -4,7 +4,8 @@
     height: 700px;
     padding: 10px;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
     gap: 10px;
     flex-shrink: 0;
     align-self: stretch;
@@ -20,11 +21,14 @@
   }
   
   .infos {
+    max-width: 1200px;
+    width: 100%;
     display: flex;
-    padding: 24px 361px;
+    padding: 24px 50px;
+    font-size: 28px;
     justify-content: center;
     align-items: center;
-    gap: 48px;
+    gap: 40px;
   }
   
   .infotext {
@@ -53,3 +57,46 @@
     vertical-align: middle;
   }
   
+  @media (max-width: 1500px) {
+
+    .infos {
+      padding: 24px 50px;
+      gap: 50px;
+    }
+
+  }
+  
+  
+  @media (max-width: 950px) {
+
+    .infos {
+      font-size: 22px;
+      gap: 30px;
+    }
+
+  }
+  
+  
+  @media (max-width: 750px) {
+
+    .infos {
+      padding: 8px, 38px;
+      font-size: 16px;
+      gap: 120px;
+    }
+
+  }
+
+  @media (max-width: 500px) {
+
+    .infos {
+      justify-self: start;
+      align-items: start;
+      align-self: start;
+      padding: 8px, 12px;
+      font-size: 8px;
+      gap: 12px;
+    }
+
+  }
+
