--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,7 +1,7 @@
 /* Container principal da barra de busca */
 .searchContainer {
   position: relative;
-  width: 600px;
+  width: 720px;
   z-index: 16;
 }
 
@@ -15,18 +15,18 @@
 
 .searchInput {
   width: 100%;
-  height: 44px;
-  padding: 16px 40px 16px 12px;
+  height: 55px;
+  padding: 8px 40px 8px 12px;
   border: 1px solid var(--cinza, #838585);
   border-radius: 4px;
-  font-size: 14px;
+  font-size: 20px;
   color: var(--preto, #000000);
   transition: border-color 0.3s ease;
 }
 
 .searchInput::placeholder {
   color: var(--cinza, #838585);
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 400;
 }
 
@@ -132,10 +132,21 @@
 }
 
 /* Responsividade */
-@media (max-width: 768px) {
+@media (max-width: 750px) {
   .searchContainer {
     width: 100%;
     max-width: 400px;
+    bottom: 4px;
+  }
+
+
+  .searchInput {
+    height: 47px;
+    font-size: 14px;
+  }
+
+  .searchInput::placeholder {
+    font-size: 14px;
   }
 
   .searchSuggestions {
